--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hardhat project fund me",
+  "name": "hardhat-project-fund-me",
   "author": "Kewen Lu",
   "version": "1.0.0",
   "main": "index.js",
